--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-  <div class="container">
-        <div class="js-counter">
-            <p>Count:<span class="js-count">0</span></p>
-            <a href="" class="btn btn-success js-increment">+</a>
-            <a href="" class="btn btn-danger js-decrement">-</a>
-        </div>
+    <div class="container">
+      <div class="js-counter">
+        <p>Count:<span class="js-count">0</span></p>
+        <a href="#" class="btn btn-success js-increment">+</a>
+        <a href="#" class="btn btn-danger js-decrement">-</a>
+      </div>
     </div>
 
     <!--[if lt IE 9]>
